feature: bossfight implemented
