# OtakuQuest/OtakuQuest.Server/DTOs/CurrentBossResponseDto.cs
@@ -1,0 +1,10 @@
+﻿using OtakuQuest.Server.Models;
+
+namespace OtakuQuest.Server.DTOs
+{
+    public class CurrentBossResponseDto
+    {
+        public Boss Boss { get; set; } = null!;
+        public int CurrentHp { get; set; }
+    }
+}
